--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "yesid",
+  "author": "rene-deivys",
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
